[project]
name = "randys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "great-tables>=0.21.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "pingouin>=0.6.1",
    "pip>=26.1.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "selenium>=4.44.0",
]
